--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,16 @@
-rootProject.name='Rohan Calculator'
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+rootProject.name = "MAD_Assignment_2_21012011103"
 include ':app'
